@startuml
class controller{
    -buttonAdd
    -buttonRem
    -buttonCls
    -buttonEdit
    -buttonSave
    -buttonLoad
    -tableview
    -textFieldSearch
    -helpGuide
    -about
    +addItem
    +clearList
    +editItem
    +removeItem
    +openHelp
    +openAbout
    +saveFile
    +loadFile
    +closeProgram
    +invSearcher
}

class ListManipulator{
    +addItem
    +clearList
    +editList
    +removeItem
    +validateValue
    +validateSerial
    +validateName
    +validateSerialList
}

class save{
    +save
    +saveTxtToFile
    +saveHtmlToFile
    +saveJsonToFile
}

class load{
    +load
    +loadJsonFromFile
    +loadHtmlFromFile
    +loadTxtFromFile
}

class InventoryManagementApplication{
    +START
    +main
}

class MineItemData{
    -mineName
    -mineValue
    -mineSerial
    +MineItemData
    +getName
    +setName
    +getValue
    +setValue
    +getSerial
    +setSerial
}

InventoryManagementApplication -- controller
controller -- ListManipulator
controller -- MineItemData
controller -- save
controller -- load

@enduml